// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute current-conditions endpoint success calls returns the result as JSON 1`] = `
Object {
  "data": Object {
    "data": Array [
      Object {
        "ApparentTemperature": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 57,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 13.9,
          },
        },
        "Ceiling": Object {
          "Imperial": Object {
            "Unit": "ft",
            "UnitType": 0,
            "Value": 1500,
          },
          "Metric": Object {
            "Unit": "m",
            "UnitType": 5,
            "Value": 457,
          },
        },
        "CloudCover": 95,
        "DewPoint": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 47,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 8.4,
          },
        },
        "EpochTime": 1634905680,
        "HasPrecipitation": false,
        "IndoorRelativeHumidity": 47,
        "IsDayTime": true,
        "Link": "http://www.accuweather.com/en/us/park-forest-village-pa/16803/current-weather/2097720?lang=en-us",
        "LocalObservationDateTime": "2021-10-22T08:28:00-04:00",
        "MobileLink": "http://www.accuweather.com/en/us/park-forest-village-pa/16803/current-weather/2097720?lang=en-us",
        "ObstructionsToVisibility": "",
        "Past24HourTemperatureDeparture": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 2,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 1.1,
          },
        },
        "Precip1hr": Object {
          "Imperial": Object {
            "Unit": "in",
            "UnitType": 1,
            "Value": 0,
          },
          "Metric": Object {
            "Unit": "mm",
            "UnitType": 3,
            "Value": 0,
          },
        },
        "PrecipitationSummary": Object {
          "Past12Hours": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0.28,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 7.2,
            },
          },
          "Past18Hours": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0.44,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 11.2,
            },
          },
          "Past24Hours": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0.44,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 11.2,
            },
          },
          "Past3Hours": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 0,
            },
          },
          "Past6Hours": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 0,
            },
          },
          "Past9Hours": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0.12,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 3,
            },
          },
          "PastHour": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 0,
            },
          },
          "Precipitation": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 0,
            },
          },
        },
        "PrecipitationType": null,
        "Pressure": Object {
          "Imperial": Object {
            "Unit": "inHg",
            "UnitType": 12,
            "Value": 29.92,
          },
          "Metric": Object {
            "Unit": "mb",
            "UnitType": 14,
            "Value": 1013.2,
          },
        },
        "PressureTendency": Object {
          "Code": "S",
          "LocalizedText": "Steady",
        },
        "RealFeelTemperature": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 46,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 7.7,
          },
        },
        "RealFeelTemperatureShade": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 46,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 7.7,
          },
        },
        "RelativeHumidity": 84,
        "Temperature": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 52,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 10.9,
          },
        },
        "TemperatureSummary": Object {
          "Past12HourRange": Object {
            "Maximum": Object {
              "Imperial": Object {
                "Unit": "F",
                "UnitType": 18,
                "Value": 61,
              },
              "Metric": Object {
                "Unit": "C",
                "UnitType": 17,
                "Value": 16.1,
              },
            },
            "Minimum": Object {
              "Imperial": Object {
                "Unit": "F",
                "UnitType": 18,
                "Value": 50,
              },
              "Metric": Object {
                "Unit": "C",
                "UnitType": 17,
                "Value": 10,
              },
            },
          },
          "Past24HourRange": Object {
            "Maximum": Object {
              "Imperial": Object {
                "Unit": "F",
                "UnitType": 18,
                "Value": 73,
              },
              "Metric": Object {
                "Unit": "C",
                "UnitType": 17,
                "Value": 22.8,
              },
            },
            "Minimum": Object {
              "Imperial": Object {
                "Unit": "F",
                "UnitType": 18,
                "Value": 50,
              },
              "Metric": Object {
                "Unit": "C",
                "UnitType": 17,
                "Value": 10,
              },
            },
          },
          "Past6HourRange": Object {
            "Maximum": Object {
              "Imperial": Object {
                "Unit": "F",
                "UnitType": 18,
                "Value": 54,
              },
              "Metric": Object {
                "Unit": "C",
                "UnitType": 17,
                "Value": 12.2,
              },
            },
            "Minimum": Object {
              "Imperial": Object {
                "Unit": "F",
                "UnitType": 18,
                "Value": 50,
              },
              "Metric": Object {
                "Unit": "C",
                "UnitType": 17,
                "Value": 10,
              },
            },
          },
        },
        "UVIndex": 0,
        "UVIndexText": "Low",
        "Visibility": Object {
          "Imperial": Object {
            "Unit": "mi",
            "UnitType": 2,
            "Value": 10,
          },
          "Metric": Object {
            "Unit": "km",
            "UnitType": 6,
            "Value": 16.1,
          },
        },
        "WeatherIcon": 7,
        "WeatherText": "Cloudy",
        "WetBulbTemperature": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 49,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 9.7,
          },
        },
        "Wind": Object {
          "Direction": Object {
            "Degrees": 270,
            "English": "W",
            "Localized": "W",
          },
          "Speed": Object {
            "Imperial": Object {
              "Unit": "mi/h",
              "UnitType": 9,
              "Value": 11.5,
            },
            "Metric": Object {
              "Unit": "km/h",
              "UnitType": 7,
              "Value": 18.5,
            },
          },
        },
        "WindChillTemperature": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 52,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 11.1,
          },
        },
        "WindGust": Object {
          "Speed": Object {
            "Imperial": Object {
              "Unit": "mi/h",
              "UnitType": 9,
              "Value": 11.5,
            },
            "Metric": Object {
              "Unit": "km/h",
              "UnitType": 7,
              "Value": 18.5,
            },
          },
        },
      },
    ],
    "result": Object {
      "precipitationPast12Hours": 720,
      "precipitationPast24Hours": 1120,
      "precipitationPastHour": 0,
      "precipitationType": 0,
      "pressure": 101320,
      "relativeHumidity": 84,
      "temperature": 109,
      "timestamp": 1634905680,
      "uvIndex": 0,
      "weatherIcon": 7,
      "windDirectionDegrees": 270,
      "windSpeed": 185,
    },
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": Object {
    "precipitationPast12Hours": 720,
    "precipitationPast24Hours": 1120,
    "precipitationPastHour": 0,
    "precipitationType": 0,
    "pressure": 101320,
    "relativeHumidity": 84,
    "temperature": 109,
    "timestamp": 1634905680,
    "uvIndex": 0,
    "weatherIcon": 7,
    "windDirectionDegrees": 270,
    "windSpeed": 185,
  },
  "statusCode": 200,
}
`;

exports[`execute current-conditions endpoint success calls returns the result encoded 1`] = `
Object {
  "data": Object {
    "data": Array [
      Object {
        "ApparentTemperature": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 57,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 13.9,
          },
        },
        "Ceiling": Object {
          "Imperial": Object {
            "Unit": "ft",
            "UnitType": 0,
            "Value": 1500,
          },
          "Metric": Object {
            "Unit": "m",
            "UnitType": 5,
            "Value": 457,
          },
        },
        "CloudCover": 95,
        "DewPoint": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 47,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 8.4,
          },
        },
        "EpochTime": 1634905680,
        "HasPrecipitation": false,
        "IndoorRelativeHumidity": 47,
        "IsDayTime": true,
        "Link": "http://www.accuweather.com/en/us/park-forest-village-pa/16803/current-weather/2097720?lang=en-us",
        "LocalObservationDateTime": "2021-10-22T08:28:00-04:00",
        "MobileLink": "http://www.accuweather.com/en/us/park-forest-village-pa/16803/current-weather/2097720?lang=en-us",
        "ObstructionsToVisibility": "",
        "Past24HourTemperatureDeparture": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 2,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 1.1,
          },
        },
        "Precip1hr": Object {
          "Imperial": Object {
            "Unit": "in",
            "UnitType": 1,
            "Value": 0,
          },
          "Metric": Object {
            "Unit": "mm",
            "UnitType": 3,
            "Value": 0,
          },
        },
        "PrecipitationSummary": Object {
          "Past12Hours": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0.28,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 7.2,
            },
          },
          "Past18Hours": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0.44,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 11.2,
            },
          },
          "Past24Hours": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0.44,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 11.2,
            },
          },
          "Past3Hours": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 0,
            },
          },
          "Past6Hours": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 0,
            },
          },
          "Past9Hours": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0.12,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 3,
            },
          },
          "PastHour": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 0,
            },
          },
          "Precipitation": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 0,
            },
          },
        },
        "PrecipitationType": null,
        "Pressure": Object {
          "Imperial": Object {
            "Unit": "inHg",
            "UnitType": 12,
            "Value": 29.92,
          },
          "Metric": Object {
            "Unit": "mb",
            "UnitType": 14,
            "Value": 1013.2,
          },
        },
        "PressureTendency": Object {
          "Code": "S",
          "LocalizedText": "Steady",
        },
        "RealFeelTemperature": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 46,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 7.7,
          },
        },
        "RealFeelTemperatureShade": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 46,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 7.7,
          },
        },
        "RelativeHumidity": 84,
        "Temperature": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 52,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 10.9,
          },
        },
        "TemperatureSummary": Object {
          "Past12HourRange": Object {
            "Maximum": Object {
              "Imperial": Object {
                "Unit": "F",
                "UnitType": 18,
                "Value": 61,
              },
              "Metric": Object {
                "Unit": "C",
                "UnitType": 17,
                "Value": 16.1,
              },
            },
            "Minimum": Object {
              "Imperial": Object {
                "Unit": "F",
                "UnitType": 18,
                "Value": 50,
              },
              "Metric": Object {
                "Unit": "C",
                "UnitType": 17,
                "Value": 10,
              },
            },
          },
          "Past24HourRange": Object {
            "Maximum": Object {
              "Imperial": Object {
                "Unit": "F",
                "UnitType": 18,
                "Value": 73,
              },
              "Metric": Object {
                "Unit": "C",
                "UnitType": 17,
                "Value": 22.8,
              },
            },
            "Minimum": Object {
              "Imperial": Object {
                "Unit": "F",
                "UnitType": 18,
                "Value": 50,
              },
              "Metric": Object {
                "Unit": "C",
                "UnitType": 17,
                "Value": 10,
              },
            },
          },
          "Past6HourRange": Object {
            "Maximum": Object {
              "Imperial": Object {
                "Unit": "F",
                "UnitType": 18,
                "Value": 54,
              },
              "Metric": Object {
                "Unit": "C",
                "UnitType": 17,
                "Value": 12.2,
              },
            },
            "Minimum": Object {
              "Imperial": Object {
                "Unit": "F",
                "UnitType": 18,
                "Value": 50,
              },
              "Metric": Object {
                "Unit": "C",
                "UnitType": 17,
                "Value": 10,
              },
            },
          },
        },
        "UVIndex": 0,
        "UVIndexText": "Low",
        "Visibility": Object {
          "Imperial": Object {
            "Unit": "mi",
            "UnitType": 2,
            "Value": 10,
          },
          "Metric": Object {
            "Unit": "km",
            "UnitType": 6,
            "Value": 16.1,
          },
        },
        "WeatherIcon": 7,
        "WeatherText": "Cloudy",
        "WetBulbTemperature": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 49,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 9.7,
          },
        },
        "Wind": Object {
          "Direction": Object {
            "Degrees": 270,
            "English": "W",
            "Localized": "W",
          },
          "Speed": Object {
            "Imperial": Object {
              "Unit": "mi/h",
              "UnitType": 9,
              "Value": 11.5,
            },
            "Metric": Object {
              "Unit": "km/h",
              "UnitType": 7,
              "Value": 18.5,
            },
          },
        },
        "WindChillTemperature": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 52,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 11.1,
          },
        },
        "WindGust": Object {
          "Speed": Object {
            "Imperial": Object {
              "Unit": "mi/h",
              "UnitType": 9,
              "Value": 11.5,
            },
            "Metric": Object {
              "Unit": "km/h",
              "UnitType": 7,
              "Value": 18.5,
            },
          },
        },
      },
    ],
    "result": "0x000000000000000000000000000000000000000000000000000000006172ae5000000000000000000000000000000000000000000000000000000000000002d0000000000000000000000000000000000000000000000000000000000000046000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000018bc8000000000000000000000000000000000000000000000000000000000000006d000000000000000000000000000000000000000000000000000000000000010e00000000000000000000000000000000000000000000000000000000000000b90000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000005400000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000007",
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": "0x000000000000000000000000000000000000000000000000000000006172ae5000000000000000000000000000000000000000000000000000000000000002d0000000000000000000000000000000000000000000000000000000000000046000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000018bc8000000000000000000000000000000000000000000000000000000000000006d000000000000000000000000000000000000000000000000000000000000010e00000000000000000000000000000000000000000000000000000000000000b90000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000005400000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000007",
  "statusCode": 200,
}
`;

exports[`execute location endpoint success calls when a location is found for the given coordinates returns the result as JSON 1`] = `
Object {
  "data": Object {
    "data": Array [
      Object {
        "AdministrativeArea": Object {
          "CountryID": "US",
          "EnglishName": "Pennsylvania",
          "EnglishType": "State",
          "ID": "PA",
          "Level": 1,
          "LocalizedName": "Pennsylvania",
          "LocalizedType": "State",
        },
        "Country": Object {
          "EnglishName": "United States",
          "ID": "US",
          "LocalizedName": "United States",
        },
        "DataSets": Array [
          "AirQualityCurrentConditions",
          "AirQualityForecasts",
          "Alerts",
          "DailyAirQualityForecast",
          "DailyPollenForecast",
          "ForecastConfidence",
          "FutureRadar",
          "MinuteCast",
          "Radar",
        ],
        "EnglishName": "Park Forest Village",
        "GeoPosition": Object {
          "Elevation": Object {
            "Imperial": Object {
              "Unit": "ft",
              "UnitType": 0,
              "Value": 1400,
            },
            "Metric": Object {
              "Unit": "m",
              "UnitType": 5,
              "Value": 427,
            },
          },
          "Latitude": 40.807,
          "Longitude": -77.917,
        },
        "IsAlias": false,
        "Key": "2097720",
        "LocalizedName": "Park Forest Village",
        "PrimaryPostalCode": "16803",
        "Rank": 65,
        "Region": Object {
          "EnglishName": "North America",
          "ID": "NAM",
          "LocalizedName": "North America",
        },
        "SupplementalAdminAreas": Array [
          Object {
            "EnglishName": "Centre",
            "Level": 2,
            "LocalizedName": "Centre",
          },
        ],
        "TimeZone": Object {
          "Code": "EDT",
          "GmtOffset": -4,
          "IsDaylightSaving": true,
          "Name": "America/New_York",
          "NextOffsetChange": "2021-11-07T06:00:00Z",
        },
        "Type": "City",
        "Version": 1,
      },
    ],
    "result": Object {
      "countryCode": "0x5553",
      "locationFound": true,
      "locationKey": 2097720,
      "name": "Park Forest Village",
    },
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": Object {
    "countryCode": "0x5553",
    "locationFound": true,
    "locationKey": 2097720,
    "name": "Park Forest Village",
  },
  "statusCode": 200,
}
`;

exports[`execute location endpoint success calls when a location is found for the given coordinates returns the result encoded 1`] = `
Object {
  "data": Object {
    "data": Array [
      Object {
        "AdministrativeArea": Object {
          "CountryID": "US",
          "EnglishName": "Pennsylvania",
          "EnglishType": "State",
          "ID": "PA",
          "Level": 1,
          "LocalizedName": "Pennsylvania",
          "LocalizedType": "State",
        },
        "Country": Object {
          "EnglishName": "United States",
          "ID": "US",
          "LocalizedName": "United States",
        },
        "DataSets": Array [
          "AirQualityCurrentConditions",
          "AirQualityForecasts",
          "Alerts",
          "DailyAirQualityForecast",
          "DailyPollenForecast",
          "ForecastConfidence",
          "FutureRadar",
          "MinuteCast",
          "Radar",
        ],
        "EnglishName": "Park Forest Village",
        "GeoPosition": Object {
          "Elevation": Object {
            "Imperial": Object {
              "Unit": "ft",
              "UnitType": 0,
              "Value": 1400,
            },
            "Metric": Object {
              "Unit": "m",
              "UnitType": 5,
              "Value": 427,
            },
          },
          "Latitude": 40.807,
          "Longitude": -77.917,
        },
        "IsAlias": false,
        "Key": "2097720",
        "LocalizedName": "Park Forest Village",
        "PrimaryPostalCode": "16803",
        "Rank": 65,
        "Region": Object {
          "EnglishName": "North America",
          "ID": "NAM",
          "LocalizedName": "North America",
        },
        "SupplementalAdminAreas": Array [
          Object {
            "EnglishName": "Centre",
            "Level": 2,
            "LocalizedName": "Centre",
          },
        ],
        "TimeZone": Object {
          "Code": "EDT",
          "GmtOffset": -4,
          "IsDaylightSaving": true,
          "Name": "America/New_York",
          "NextOffsetChange": "2021-11-07T06:00:00Z",
        },
        "Type": "City",
        "Version": 1,
      },
    ],
    "result": Array [
      true,
      "0x000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000002002380000000000000000000000000000000000000000000000000000000000000060555300000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000135061726b20466f726573742056696c6c61676500000000000000000000000000",
    ],
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": Array [
    true,
    "0x000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000002002380000000000000000000000000000000000000000000000000000000000000060555300000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000135061726b20466f726573742056696c6c61676500000000000000000000000000",
  ],
  "statusCode": 200,
}
`;

exports[`execute location endpoint success calls when no location is found for the given coordinates returns the result as JSON 1`] = `
Object {
  "data": Object {
    "data": Array [],
    "result": Object {
      "countryCode": "0x",
      "locationFound": false,
      "locationKey": 0,
      "name": "",
    },
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": Object {
    "countryCode": "0x",
    "locationFound": false,
    "locationKey": 0,
    "name": "",
  },
  "statusCode": 200,
}
`;

exports[`execute location endpoint success calls when no location is found for the given coordinates returns the result encoded 1`] = `
Object {
  "data": Object {
    "data": Array [],
    "result": Array [
      false,
      "0x",
    ],
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": Array [
    false,
    "0x",
  ],
  "statusCode": 200,
}
`;

exports[`execute location-current-conditions endpoint success calls when a location is found for the given coordinates returns the result as JSON 1`] = `
Object {
  "data": Object {
    "dataCurrentConditions": Array [
      Object {
        "ApparentTemperature": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 57,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 13.9,
          },
        },
        "Ceiling": Object {
          "Imperial": Object {
            "Unit": "ft",
            "UnitType": 0,
            "Value": 1500,
          },
          "Metric": Object {
            "Unit": "m",
            "UnitType": 5,
            "Value": 457,
          },
        },
        "CloudCover": 95,
        "DewPoint": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 47,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 8.4,
          },
        },
        "EpochTime": 1634905680,
        "HasPrecipitation": false,
        "IndoorRelativeHumidity": 47,
        "IsDayTime": true,
        "Link": "http://www.accuweather.com/en/us/park-forest-village-pa/16803/current-weather/2097720?lang=en-us",
        "LocalObservationDateTime": "2021-10-22T08:28:00-04:00",
        "MobileLink": "http://www.accuweather.com/en/us/park-forest-village-pa/16803/current-weather/2097720?lang=en-us",
        "ObstructionsToVisibility": "",
        "Past24HourTemperatureDeparture": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 2,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 1.1,
          },
        },
        "Precip1hr": Object {
          "Imperial": Object {
            "Unit": "in",
            "UnitType": 1,
            "Value": 0,
          },
          "Metric": Object {
            "Unit": "mm",
            "UnitType": 3,
            "Value": 0,
          },
        },
        "PrecipitationSummary": Object {
          "Past12Hours": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0.28,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 7.2,
            },
          },
          "Past18Hours": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0.44,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 11.2,
            },
          },
          "Past24Hours": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0.44,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 11.2,
            },
          },
          "Past3Hours": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 0,
            },
          },
          "Past6Hours": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 0,
            },
          },
          "Past9Hours": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0.12,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 3,
            },
          },
          "PastHour": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 0,
            },
          },
          "Precipitation": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 0,
            },
          },
        },
        "PrecipitationType": null,
        "Pressure": Object {
          "Imperial": Object {
            "Unit": "inHg",
            "UnitType": 12,
            "Value": 29.92,
          },
          "Metric": Object {
            "Unit": "mb",
            "UnitType": 14,
            "Value": 1013.2,
          },
        },
        "PressureTendency": Object {
          "Code": "S",
          "LocalizedText": "Steady",
        },
        "RealFeelTemperature": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 46,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 7.7,
          },
        },
        "RealFeelTemperatureShade": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 46,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 7.7,
          },
        },
        "RelativeHumidity": 84,
        "Temperature": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 52,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 10.9,
          },
        },
        "TemperatureSummary": Object {
          "Past12HourRange": Object {
            "Maximum": Object {
              "Imperial": Object {
                "Unit": "F",
                "UnitType": 18,
                "Value": 61,
              },
              "Metric": Object {
                "Unit": "C",
                "UnitType": 17,
                "Value": 16.1,
              },
            },
            "Minimum": Object {
              "Imperial": Object {
                "Unit": "F",
                "UnitType": 18,
                "Value": 50,
              },
              "Metric": Object {
                "Unit": "C",
                "UnitType": 17,
                "Value": 10,
              },
            },
          },
          "Past24HourRange": Object {
            "Maximum": Object {
              "Imperial": Object {
                "Unit": "F",
                "UnitType": 18,
                "Value": 73,
              },
              "Metric": Object {
                "Unit": "C",
                "UnitType": 17,
                "Value": 22.8,
              },
            },
            "Minimum": Object {
              "Imperial": Object {
                "Unit": "F",
                "UnitType": 18,
                "Value": 50,
              },
              "Metric": Object {
                "Unit": "C",
                "UnitType": 17,
                "Value": 10,
              },
            },
          },
          "Past6HourRange": Object {
            "Maximum": Object {
              "Imperial": Object {
                "Unit": "F",
                "UnitType": 18,
                "Value": 54,
              },
              "Metric": Object {
                "Unit": "C",
                "UnitType": 17,
                "Value": 12.2,
              },
            },
            "Minimum": Object {
              "Imperial": Object {
                "Unit": "F",
                "UnitType": 18,
                "Value": 50,
              },
              "Metric": Object {
                "Unit": "C",
                "UnitType": 17,
                "Value": 10,
              },
            },
          },
        },
        "UVIndex": 0,
        "UVIndexText": "Low",
        "Visibility": Object {
          "Imperial": Object {
            "Unit": "mi",
            "UnitType": 2,
            "Value": 10,
          },
          "Metric": Object {
            "Unit": "km",
            "UnitType": 6,
            "Value": 16.1,
          },
        },
        "WeatherIcon": 7,
        "WeatherText": "Cloudy",
        "WetBulbTemperature": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 49,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 9.7,
          },
        },
        "Wind": Object {
          "Direction": Object {
            "Degrees": 270,
            "English": "W",
            "Localized": "W",
          },
          "Speed": Object {
            "Imperial": Object {
              "Unit": "mi/h",
              "UnitType": 9,
              "Value": 11.5,
            },
            "Metric": Object {
              "Unit": "km/h",
              "UnitType": 7,
              "Value": 18.5,
            },
          },
        },
        "WindChillTemperature": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 52,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 11.1,
          },
        },
        "WindGust": Object {
          "Speed": Object {
            "Imperial": Object {
              "Unit": "mi/h",
              "UnitType": 9,
              "Value": 11.5,
            },
            "Metric": Object {
              "Unit": "km/h",
              "UnitType": 7,
              "Value": 18.5,
            },
          },
        },
      },
    ],
    "dataLocation": Array [
      Object {
        "AdministrativeArea": Object {
          "CountryID": "US",
          "EnglishName": "Pennsylvania",
          "EnglishType": "State",
          "ID": "PA",
          "Level": 1,
          "LocalizedName": "Pennsylvania",
          "LocalizedType": "State",
        },
        "Country": Object {
          "EnglishName": "United States",
          "ID": "US",
          "LocalizedName": "United States",
        },
        "DataSets": Array [
          "AirQualityCurrentConditions",
          "AirQualityForecasts",
          "Alerts",
          "DailyAirQualityForecast",
          "DailyPollenForecast",
          "ForecastConfidence",
          "FutureRadar",
          "MinuteCast",
          "Radar",
        ],
        "EnglishName": "Park Forest Village",
        "GeoPosition": Object {
          "Elevation": Object {
            "Imperial": Object {
              "Unit": "ft",
              "UnitType": 0,
              "Value": 1400,
            },
            "Metric": Object {
              "Unit": "m",
              "UnitType": 5,
              "Value": 427,
            },
          },
          "Latitude": 40.807,
          "Longitude": -77.917,
        },
        "IsAlias": false,
        "Key": "2097720",
        "LocalizedName": "Park Forest Village",
        "PrimaryPostalCode": "16803",
        "Rank": 65,
        "Region": Object {
          "EnglishName": "North America",
          "ID": "NAM",
          "LocalizedName": "North America",
        },
        "SupplementalAdminAreas": Array [
          Object {
            "EnglishName": "Centre",
            "Level": 2,
            "LocalizedName": "Centre",
          },
        ],
        "TimeZone": Object {
          "Code": "EDT",
          "GmtOffset": -4,
          "IsDaylightSaving": true,
          "Name": "America/New_York",
          "NextOffsetChange": "2021-11-07T06:00:00Z",
        },
        "Type": "City",
        "Version": 1,
      },
    ],
    "result": Object {
      "countryCode": "0x5553",
      "locationFound": true,
      "locationKey": 2097720,
      "name": "Park Forest Village",
      "precipitationPast12Hours": 720,
      "precipitationPast24Hours": 1120,
      "precipitationPastHour": 0,
      "precipitationType": 0,
      "pressure": 101320,
      "relativeHumidity": 84,
      "temperature": 109,
      "timestamp": 1634905680,
      "uvIndex": 0,
      "weatherIcon": 7,
      "windDirectionDegrees": 270,
      "windSpeed": 185,
    },
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": Object {
    "countryCode": "0x5553",
    "locationFound": true,
    "locationKey": 2097720,
    "name": "Park Forest Village",
    "precipitationPast12Hours": 720,
    "precipitationPast24Hours": 1120,
    "precipitationPastHour": 0,
    "precipitationType": 0,
    "pressure": 101320,
    "relativeHumidity": 84,
    "temperature": 109,
    "timestamp": 1634905680,
    "uvIndex": 0,
    "weatherIcon": 7,
    "windDirectionDegrees": 270,
    "windSpeed": 185,
  },
  "statusCode": 200,
}
`;

exports[`execute location-current-conditions endpoint success calls when a location is found for the given coordinates returns the result encoded 1`] = `
Object {
  "data": Object {
    "dataCurrentConditions": Array [
      Object {
        "ApparentTemperature": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 57,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 13.9,
          },
        },
        "Ceiling": Object {
          "Imperial": Object {
            "Unit": "ft",
            "UnitType": 0,
            "Value": 1500,
          },
          "Metric": Object {
            "Unit": "m",
            "UnitType": 5,
            "Value": 457,
          },
        },
        "CloudCover": 95,
        "DewPoint": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 47,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 8.4,
          },
        },
        "EpochTime": 1634905680,
        "HasPrecipitation": false,
        "IndoorRelativeHumidity": 47,
        "IsDayTime": true,
        "Link": "http://www.accuweather.com/en/us/park-forest-village-pa/16803/current-weather/2097720?lang=en-us",
        "LocalObservationDateTime": "2021-10-22T08:28:00-04:00",
        "MobileLink": "http://www.accuweather.com/en/us/park-forest-village-pa/16803/current-weather/2097720?lang=en-us",
        "ObstructionsToVisibility": "",
        "Past24HourTemperatureDeparture": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 2,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 1.1,
          },
        },
        "Precip1hr": Object {
          "Imperial": Object {
            "Unit": "in",
            "UnitType": 1,
            "Value": 0,
          },
          "Metric": Object {
            "Unit": "mm",
            "UnitType": 3,
            "Value": 0,
          },
        },
        "PrecipitationSummary": Object {
          "Past12Hours": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0.28,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 7.2,
            },
          },
          "Past18Hours": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0.44,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 11.2,
            },
          },
          "Past24Hours": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0.44,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 11.2,
            },
          },
          "Past3Hours": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 0,
            },
          },
          "Past6Hours": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 0,
            },
          },
          "Past9Hours": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0.12,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 3,
            },
          },
          "PastHour": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 0,
            },
          },
          "Precipitation": Object {
            "Imperial": Object {
              "Unit": "in",
              "UnitType": 1,
              "Value": 0,
            },
            "Metric": Object {
              "Unit": "mm",
              "UnitType": 3,
              "Value": 0,
            },
          },
        },
        "PrecipitationType": null,
        "Pressure": Object {
          "Imperial": Object {
            "Unit": "inHg",
            "UnitType": 12,
            "Value": 29.92,
          },
          "Metric": Object {
            "Unit": "mb",
            "UnitType": 14,
            "Value": 1013.2,
          },
        },
        "PressureTendency": Object {
          "Code": "S",
          "LocalizedText": "Steady",
        },
        "RealFeelTemperature": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 46,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 7.7,
          },
        },
        "RealFeelTemperatureShade": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 46,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 7.7,
          },
        },
        "RelativeHumidity": 84,
        "Temperature": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 52,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 10.9,
          },
        },
        "TemperatureSummary": Object {
          "Past12HourRange": Object {
            "Maximum": Object {
              "Imperial": Object {
                "Unit": "F",
                "UnitType": 18,
                "Value": 61,
              },
              "Metric": Object {
                "Unit": "C",
                "UnitType": 17,
                "Value": 16.1,
              },
            },
            "Minimum": Object {
              "Imperial": Object {
                "Unit": "F",
                "UnitType": 18,
                "Value": 50,
              },
              "Metric": Object {
                "Unit": "C",
                "UnitType": 17,
                "Value": 10,
              },
            },
          },
          "Past24HourRange": Object {
            "Maximum": Object {
              "Imperial": Object {
                "Unit": "F",
                "UnitType": 18,
                "Value": 73,
              },
              "Metric": Object {
                "Unit": "C",
                "UnitType": 17,
                "Value": 22.8,
              },
            },
            "Minimum": Object {
              "Imperial": Object {
                "Unit": "F",
                "UnitType": 18,
                "Value": 50,
              },
              "Metric": Object {
                "Unit": "C",
                "UnitType": 17,
                "Value": 10,
              },
            },
          },
          "Past6HourRange": Object {
            "Maximum": Object {
              "Imperial": Object {
                "Unit": "F",
                "UnitType": 18,
                "Value": 54,
              },
              "Metric": Object {
                "Unit": "C",
                "UnitType": 17,
                "Value": 12.2,
              },
            },
            "Minimum": Object {
              "Imperial": Object {
                "Unit": "F",
                "UnitType": 18,
                "Value": 50,
              },
              "Metric": Object {
                "Unit": "C",
                "UnitType": 17,
                "Value": 10,
              },
            },
          },
        },
        "UVIndex": 0,
        "UVIndexText": "Low",
        "Visibility": Object {
          "Imperial": Object {
            "Unit": "mi",
            "UnitType": 2,
            "Value": 10,
          },
          "Metric": Object {
            "Unit": "km",
            "UnitType": 6,
            "Value": 16.1,
          },
        },
        "WeatherIcon": 7,
        "WeatherText": "Cloudy",
        "WetBulbTemperature": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 49,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 9.7,
          },
        },
        "Wind": Object {
          "Direction": Object {
            "Degrees": 270,
            "English": "W",
            "Localized": "W",
          },
          "Speed": Object {
            "Imperial": Object {
              "Unit": "mi/h",
              "UnitType": 9,
              "Value": 11.5,
            },
            "Metric": Object {
              "Unit": "km/h",
              "UnitType": 7,
              "Value": 18.5,
            },
          },
        },
        "WindChillTemperature": Object {
          "Imperial": Object {
            "Unit": "F",
            "UnitType": 18,
            "Value": 52,
          },
          "Metric": Object {
            "Unit": "C",
            "UnitType": 17,
            "Value": 11.1,
          },
        },
        "WindGust": Object {
          "Speed": Object {
            "Imperial": Object {
              "Unit": "mi/h",
              "UnitType": 9,
              "Value": 11.5,
            },
            "Metric": Object {
              "Unit": "km/h",
              "UnitType": 7,
              "Value": 18.5,
            },
          },
        },
      },
    ],
    "dataLocation": Array [
      Object {
        "AdministrativeArea": Object {
          "CountryID": "US",
          "EnglishName": "Pennsylvania",
          "EnglishType": "State",
          "ID": "PA",
          "Level": 1,
          "LocalizedName": "Pennsylvania",
          "LocalizedType": "State",
        },
        "Country": Object {
          "EnglishName": "United States",
          "ID": "US",
          "LocalizedName": "United States",
        },
        "DataSets": Array [
          "AirQualityCurrentConditions",
          "AirQualityForecasts",
          "Alerts",
          "DailyAirQualityForecast",
          "DailyPollenForecast",
          "ForecastConfidence",
          "FutureRadar",
          "MinuteCast",
          "Radar",
        ],
        "EnglishName": "Park Forest Village",
        "GeoPosition": Object {
          "Elevation": Object {
            "Imperial": Object {
              "Unit": "ft",
              "UnitType": 0,
              "Value": 1400,
            },
            "Metric": Object {
              "Unit": "m",
              "UnitType": 5,
              "Value": 427,
            },
          },
          "Latitude": 40.807,
          "Longitude": -77.917,
        },
        "IsAlias": false,
        "Key": "2097720",
        "LocalizedName": "Park Forest Village",
        "PrimaryPostalCode": "16803",
        "Rank": 65,
        "Region": Object {
          "EnglishName": "North America",
          "ID": "NAM",
          "LocalizedName": "North America",
        },
        "SupplementalAdminAreas": Array [
          Object {
            "EnglishName": "Centre",
            "Level": 2,
            "LocalizedName": "Centre",
          },
        ],
        "TimeZone": Object {
          "Code": "EDT",
          "GmtOffset": -4,
          "IsDaylightSaving": true,
          "Name": "America/New_York",
          "NextOffsetChange": "2021-11-07T06:00:00Z",
        },
        "Type": "City",
        "Version": 1,
      },
    ],
    "result": Array [
      true,
      "0x000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000002002380000000000000000000000000000000000000000000000000000000000000060555300000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000135061726b20466f726573742056696c6c61676500000000000000000000000000",
      "0x000000000000000000000000000000000000000000000000000000006172ae5000000000000000000000000000000000000000000000000000000000000002d0000000000000000000000000000000000000000000000000000000000000046000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000018bc8000000000000000000000000000000000000000000000000000000000000006d000000000000000000000000000000000000000000000000000000000000010e00000000000000000000000000000000000000000000000000000000000000b90000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000005400000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000007",
    ],
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": Array [
    true,
    "0x000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000002002380000000000000000000000000000000000000000000000000000000000000060555300000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000135061726b20466f726573742056696c6c61676500000000000000000000000000",
    "0x000000000000000000000000000000000000000000000000000000006172ae5000000000000000000000000000000000000000000000000000000000000002d0000000000000000000000000000000000000000000000000000000000000046000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000018bc8000000000000000000000000000000000000000000000000000000000000006d000000000000000000000000000000000000000000000000000000000000010e00000000000000000000000000000000000000000000000000000000000000b90000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000005400000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000007",
  ],
  "statusCode": 200,
}
`;

exports[`execute location-current-conditions endpoint success calls when no location is found for the given coordinates returns the result as JSON 1`] = `
Object {
  "data": Object {
    "dataLocation": Array [],
    "result": Object {
      "countryCode": "0x",
      "locationFound": false,
      "locationKey": 0,
      "name": "",
      "precipitationPast12Hours": 0,
      "precipitationPast24Hours": 0,
      "precipitationPastHour": 0,
      "precipitationType": 0,
      "pressure": 0,
      "relativeHumidity": 0,
      "temperature": 0,
      "timestamp": 0,
      "uvIndex": 0,
      "weatherIcon": 0,
      "windDirectionDegrees": 0,
      "windSpeed": 0,
    },
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": Object {
    "countryCode": "0x",
    "locationFound": false,
    "locationKey": 0,
    "name": "",
    "precipitationPast12Hours": 0,
    "precipitationPast24Hours": 0,
    "precipitationPastHour": 0,
    "precipitationType": 0,
    "pressure": 0,
    "relativeHumidity": 0,
    "temperature": 0,
    "timestamp": 0,
    "uvIndex": 0,
    "weatherIcon": 0,
    "windDirectionDegrees": 0,
    "windSpeed": 0,
  },
  "statusCode": 200,
}
`;

exports[`execute location-current-conditions endpoint success calls when no location is found for the given coordinates returns the result encoded 1`] = `
Object {
  "data": Object {
    "dataLocation": Array [],
    "result": Array [
      false,
      "0x",
      "0x",
    ],
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": Array [
    false,
    "0x",
    "0x",
  ],
  "statusCode": 200,
}
`;
